--- a/frontend/image-noise-ui/index.html
+++ b/frontend/image-noise-ui/index.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/public/noise.png">
+    <link rel="icon" href="/noise.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>noise-generator</title>
   </head>
